--- a/index.html
+++ b/index.html
@@ -39,12 +39,10 @@
             <button id="give-up" @click="give_up">PES ET!</button>
         </div>
     </section>
-    <section class="row log" v-if="game_is_on">
+    <section class="row log" v-if="logs != 0">
         <div class="small-12 columns">
             <ul>
-                <li>
-
-                </li>
+                <li :class="{'player-turn' : log.turn == 'P', 'monster-turn' : log.turn == 'M'}" v-for="log in logs">{{ log.text }}</li>
             </ul>
         </div>
     </section>
